--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Spotify Game</title>
-    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/landing.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <script src="./scripts/main.js" defer></script>
 </head>
@@ -25,19 +25,17 @@
                             .cls-1{fill:#1d1d1b;}
                             .cls-2{fill:#fff;}
                         </style>
-                    </defs>
-                    <title>face</title>
-                    <g id="Left_Eye" data-name="Left Eye">
-                        <circle class="cls-1" cx="79.34" cy="74.66" r="31"/>
-                        <circle class="cls-2" cx="79.34" cy="74.66" r="12.27"/>
-                        <circle class="cls-2" cx="67.07" cy="83.34" r="7.02"/></g>
+                     </defs>
+                        <title>face</title>
+                        <g id="Left_Eye" data-name="Left Eye">
+                            <circle class="cls-1" cx="79.34" cy="74.66" r="31"/><path class="cls-2" d="M91.61,74.66A12.27,12.27,0,0,1,79.34,86.94a12.07,12.07,0,0,1-5.62-1.37,7,7,0,1,1-6.65-9.25h.11a13.13,13.13,0,0,1-.11-1.67,12.27,12.27,0,0,1,24.54,0Z"/>
+                        </g>
                         <g id="Right_Eye" data-name="Right Eye">
                             <circle class="cls-1" cx="515.94" cy="74.66" r="31"/>
-                            <circle class="cls-2" cx="515.94" cy="74.66" r="12.27"/>
-                            <circle class="cls-2" cx="503.66" cy="83.34" r="7.02"/>
+                            <path class="cls-2" d="M528.21,74.66a12.28,12.28,0,0,1-12.27,12.28,12.07,12.07,0,0,1-5.62-1.37,7,7,0,1,1-6.66-9.25h.11a13.13,13.13,0,0,1-.11-1.67,12.28,12.28,0,0,1,24.55,0Z"/>
                         </g>
                         <path id="Mouth" class="cls-1" d="M338,133.66c0,.18,0,.36,0,.54a48.25,48.25,0,0,1-96.49,0c0-.18,0-.36,0-.54a10.53,10.53,0,0,1,21.06,0,27.19,27.19,0,1,0,54.38,0h0a10.53,10.53,0,0,1,21.06,0Z"/>
-                </svg>
+                    </svg>
                 <a href="http://localhost:3000/spotify/login" class="ghost">Login</a>
             </div>
         </div>
