--- a/static/index.html
+++ b/static/index.html
@@ -36,7 +36,7 @@
                         </g>
                         <path id="Mouth" class="cls-1" d="M338,133.66c0,.18,0,.36,0,.54a48.25,48.25,0,0,1-96.49,0c0-.18,0-.36,0-.54a10.53,10.53,0,0,1,21.06,0,27.19,27.19,0,1,0,54.38,0h0a10.53,10.53,0,0,1,21.06,0Z"/>
                     </svg>
-                <a href="http://localhost:3000/spotify/login" class="ghost">Login</a>
+                <a href="https://spotifygame.herokuapp.com/spotify/login" class="ghost">Login</a>
             </div>
         </div>
         <div class="overlay-container">
